# ReconstructAspherixBodies

./: README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: Example_01.ovito  Example_01.py
src/ReconstructAspherixBodies/: __init__.py
tests/: reference_data.json  test_modifier.py
