[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReconstructAspherixBodies"
version = "2024.0"
description = "Merge Aspherix bodies into OVITO particles"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.11.0",
    "scipy >= 1.10.0"
]

[project.urls]
repository = "https://github.com/ovito-org/ReconstructAspherixBodies"

[project.entry-points.'OVITO.Modifier']
"Reconstruct Aspherix Bodies" = "ReconstructAspherixBodies:ReconstructAspherixBodies"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]
